# project-templates

./: LICENSE  README.md
templates/cpp/: README.md
templates/cpp/with-cmake/: .editorconfig  .gitignore  CMakeLists.txt  README.md
templates/cpp/with-cmake/src/: main.cpp  sum.cpp
templates/cpp/with-cmake/tests/unit-tests/: CMakeLists.txt  sum-tests.cpp
templates/node/node-template/: README.md  package-lock.json  package.json
templates/node/node-template/src/: server.ts
templates/node/node-template/src/env/: index.ts
templates/python/simple/: README.md
templates/python/simple/src/: src.md
